[package]
name = "wgpu_1"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.5"
wgpu = { version = "22.0", features = ["webgl"] }
pollster = "0.3"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
take_mut = "0.2"
web-sys = { version = "0.3", features = [
    "Document", 
    "Element", 
    "Window", 
    "console", 
    "HtmlCanvasElement", 
    "HtmlCollection"
]}

[lib]
crate-type = ["cdylib", "rlib"]